--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
             background-image: url('https://i.pinimg.com/736x/0e/3a/f9/0e3af940247062ec83610ea7f5fc7037.jpg');
             background-size: cover;
             background-position: center;
-            padding: 50px;
+            background-attachment: fixed;
+            padding: 20px;
+            margin: 0;
         }
         .container {
-            background: white;
+            background: rgba(255, 255, 255, 0.9);
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
+            max-width: 90%;
+            width: 400px;
             margin: auto;
         }
         button {
@@ -31,10 +34,15 @@
             border-radius: 5px;
             cursor: pointer;
             transition: all 0.3s ease;
+            font-size: 16px;
         }
         button:hover {
             background-color: #e6005c;
             transform: scale(1.1);
+        }
+        img {
+            max-width: 100%;
+            height: auto;
         }
     </style>
 </head>
@@ -57,8 +65,6 @@
             document.getElementById("content").innerHTML = `
                 <p>Muchas gracias por decir que sí, mi amor. ❤️</p>
                 <p>Te amo mucho y quiero invitarte a nuestra cita especial.</p>
-                <p>Te quiero dar y quiero darte un dia muy especial para que sepas.</p>
-                <p>Lo mucho que te amo y que sea especial para ti.</p>
                 <img src="https://media.tenor.com/bswX3v74bcEAAAAC/cute-love.gif" width="300px">
             `;
         }
