--- a/index.html
+++ b/index.html
@@ -65,6 +65,24 @@
             document.getElementById("content").innerHTML = `
                 <p>Muchas gracias por decir que sí, mi amor. ❤️</p>
                 <p>Te amo mucho y quiero invitarte a nuestra cita especial.</p>
+                <p>Te quiero dar y quiero darte un dia muy bonito. ❤️</p>
+                <p>Porque te lo mereses mi niña hermosa.</p>
+                <p>TE AMO MUCHO MUCHO MUCHO MUCHO MUCHO. ❤️</p>
+                <p>TE AMO MUCHO MUCHO MUCHO MUCHO MUCHO. ❤️</p>
+                <p>TE AMO MUCHO MUCHO MUCHO MUCHO MUCHO. ❤️</p>
+                <p>TE AMO MUCHO MUCHO MUCHO MUCHO MUCHO. ❤️</p>
+                <p>TE AMO MUCHO MUCHO MUCHO MUCHO MUCHO. ❤️</p>
+                <p>TE AMO MUCHO MUCHO MUCHO MUCHO MUCHO. ❤️</p>
+                <p>TE AMO MUCHO MUCHO MUCHO MUCHO MUCHO. ❤️</p>
+                <p>TE AMO MUCHO MUCHO MUCHO MUCHO MUCHO. ❤️</p>
+                <p>TE AMO MUCHO MUCHO MUCHO MUCHO MUCHO. ❤️</p>
+                <p>TE AMO MUCHO MUCHO MUCHO MUCHO MUCHO. ❤️</p>
+                <p>TE AMO MUCHO MUCHO MUCHO MUCHO MUCHO. ❤️</p>
+                <p>TE AMO MUCHO MUCHO MUCHO MUCHO MUCHO. ❤️</p>
+                <p>TE AMO MUCHO MUCHO MUCHO MUCHO MUCHO. ❤️</p>
+                <p>TE AMO MUCHO MUCHO MUCHO MUCHO MUCHO. ❤️</p>
+                <p>TE AMO MUCHO MUCHO MUCHO MUCHO MUCHO. ❤️</p>
+                <p>TE AMO MUCHO MUCHO MUCHO MUCHO MUCHO. ❤️</p>
                 <img src="https://media.tenor.com/bswX3v74bcEAAAAC/cute-love.gif" width="300px">
             `;
         }
